tests/errors/collections/list_overflow_slice.sad
# list_overflow_slice test
a = [1, 2]
risk {
    show(a.slice(0, 100000000000000000000000000000000000000))
} trap IndexOutOfBoundsError e {
    show(e.message)
}
